// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/migration migrateConfig(config) it migrates config 1`] = `
Object {
  "enabled": true,
  "optionalDependencies": Object {
    "respectLatest": false,
  },
  "schedule": Array [
    "after 5pm",
  ],
}
`;

exports[`config/migration migrateConfig(config) it migrates subconfig 1`] = `
Object {
  "lockFileMaintenance": Object {
    "optionalDependencies": Object {
      "respectLatest": false,
    },
  },
}
`;
